@@ -194,7 +194,10 @@ HBASE SHELL COMMANDS:
 
  disable   Disable the named table: e.g. "hbase> disable 't1'"
  
- drop      Drop the named table. Table must first be disabled
+ drop      Drop the named table. Table must first be disabled. If table has
+           more than one region, run a major compaction on .META.:
+
+           hbase> major_compact ".META."
 
  enable    Enable the named table
 
