@@ -207,6 +207,7 @@ Release 0.20.0 - Unreleased
    HBASE-1341  HTable pooler
    HBASE-1379  re-enable LZO using hadoop-gpl-compression library
                (Ryan Rawson via Stack)
+   HBASE-1383  hbase shell needs to warn on deleting multi-region table
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
